--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -12,10 +12,11 @@
     <form method="POST" action="/login">
       <input type="email" name="email" placeholder="Email" required />
       <input type="password" name="password" placeholder="Password" required />
-      <button type="submit">Login</button>
+      <button type="submit" class="btn">Login</button>
     </form>
-    <p>Don't have an account? <a href="#">Sign up</a></p> <!-- Placeholder for now -->
+    <p>Don't have an account? <a href="/signup" class="btn">Sign up</a></p>
   </div>
 </body>
 </html>
+
 
